fix missing background on ironsworn theme

--- a/src/styles/fvtt/app.less
+++ b/src/styles/fvtt/app.less
@@ -52,7 +52,7 @@
 	background: var(--ironsworn-color-bg);
 }
 
-.window-content {
+.window-app .window-content {
 	// so the background doesn't spill over the parent element's border
 	border-bottom-left-radius: inherit;
 	border-bottom-right-radius: inherit;
